--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -3,9 +3,16 @@
 
 {% compress js %}
 
+<script type="text/javascript" src="{% static 'bower_components/jquery/dist/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'bower_components/underscore/underscore.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'bower_components/angular/angular.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/angular-route/angular-route.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/angular-cookies/angular-cookies.js' %}"></script>
+
+
+<script type="text/javascript" src="{% static 'bower_components/ng-dialog/js/ngDialog.js' %}"></script>
+<script type="text/javascript" src="{% static 'lib/snackbarjs/snackbar.min.js' %}"></script>
 
 <script type="text/javascript" src="{% static 'javascripts/foyer.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/foyer.config.js' %}"></script>
@@ -16,5 +23,15 @@
 <script type="text/javascript" src="{% static 'javascripts/authentication/controllers/login.controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/layout/layout.module.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/layout/controllers/navbar.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/posts/posts.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/posts/services/posts.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/utils/utils.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/utils/services/snackbar.service.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/layout/controllers/index.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/posts/directives/posts.directive.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/posts/controllers/posts.controller.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/posts/directives/post.directive.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/posts/controllers/new-post.controller.js' %}"></script>
+
 
 {% endcompress %}
