--- a/static/templates/layout/index.html
+++ b/static/templates/layout/index.html
@@ -1,2 +1,12 @@
 <posts posts="vm.posts" ng-show="vm.posts && vm.posts.length"></posts>
-<a href="/static/templates/posts/new-post.html">New Post</a>
+
+<a
+    href="javascript:void(0)"
+    ng-show="vm.isAuthenticated"
+    ng-dialog="/static/templates/posts/new-post.html"
+    ng-dialog-controller="NewPostController as vm"
+ >
+    <button>
+        New Post
+    </button>
+</a>
