--- a/templates/stylesheets.html
+++ b/templates/stylesheets.html
@@ -3,4 +3,6 @@
 
 {% compress css %}
 <link rel="stylesheet" type="text/css" href="{% static 'stylesheets/styles.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'bower_components/ng-dialog/css/ngDialog.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'bower_components/ng-dialog/css/ngDialog-theme-default.css' %}" />
 {% endcompress %}
