--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,26 +1,13 @@
 <nav class="navbar navbar-default" role="navigation" ng-controller="NavbarController as vm">
-  <div>
-    <div>
-      <button type="button" data-toggle="collapse" data-target="#not-google-plus-nav">
-        <span>Toggle Navigation</span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <a href="/">Not Google Plus</a>
-    </div> <!-- ./navbar-header -->
-
-    <div id="not-google-plus-nav">
-      <ul>
+    <a class="logo" href="/">Not Google Plus</a>
+    <ul class="menu">
         {% if user.is_authenticated %}
-          <li><a href="/+{{ user.username }}">+{{ user.username }}</a></li>
-          <li><a href="/+{{ user.username }}/settings">Settings</a></li>
-          <li><a href="javascript:void(0)" ng-click="vm.logout()">Logout</a></li>
+        <li><a href="/+{{ user.username }}">+{{ user.username }}</a></li>
+        <li><a href="/+{{ user.username }}/settings">Settings</a></li>
+        <li><a href="javascript:void(0)" ng-click="vm.logout()">Logout</a></li>
         {% else %}
-          <li><a href="/login">Login</a></li>
-          <li><a href="/register">Register</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/register">Register</a></li>
         {% endif %}
-      </ul>
-    </div> <!-- /.collapse.navbar-collapse -->
-  </div> <!-- /.container-fluid -->
+    </ul>
 </nav>
