--- a/static/templates/layout/index.html
+++ b/static/templates/layout/index.html
@@ -1,12 +1,13 @@
-<a
-    href="javascript:void(0)"
-    ng-show="vm.isAuthenticated"
-    ng-dialog="/static/templates/posts/new-post.html"
-    ng-dialog-controller="NewPostController as vm"
- >
-    <button>
-        New Post
-    </button>
-</a>
-
+<div class="with-margin">
+    <a
+        href="javascript:void(0)"
+        ng-show="vm.isAuthenticated"
+        ng-dialog="/static/templates/posts/new-post.html"
+        ng-dialog-controller="NewPostController as vm"
+     >
+        <button class="btn">
+            New Post
+        </button>
+    </a>
+</div>
 <posts posts="vm.posts" ng-show="vm.posts && vm.posts.length"></posts>
