Updated profile header design

--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -36,14 +36,11 @@ a:active  {
 }
 
 .menu {
+    margin: 20px 20px;
     display: flex;
     flex-flow: row;
     justify-content: flex-end;
     list-style: none;
-}
-
-.menu ul {
-    margin: 20px 0;
 }
 
 .menu li {
@@ -51,19 +48,40 @@ a:active  {
 }
 
 .posts {
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     flex-flow: row wrap;
 }
 
+.post-wrapper {
+    width: 33.3333%;
+}
+
+.form-page {
+    min-width: 320px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .well {
-    width: 300px;
     min-height: 100px;
     margin: 20px;
     padding: 20px;
     background: #eee;
     display: flex;
+}
+.form-page > .well {
+    min-width: 320px;
+}
+
+.profile__header {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .form-input {
@@ -85,10 +103,20 @@ a:active  {
     padding: 10px 0;
 }
 
+.button-right {
+    display: flex;
+    flex-flow: row;
+    justify-content: flex-end;
+}
+
 .button-group {
     display: flex;
     flex-flow: row;
     justify-content: flex-end;
+}
+
+.btn-last {
+    margin-left: 20px;
 }
 
 .with-margin {
@@ -103,6 +131,22 @@ a:active  {
     padding: 5px;
     flex: 1;
 }
+
+.loader {
+  left: 50%;
+  top: 50%;
+  position: fixed;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+  .loader #spinner {
+    box-sizing: border-box;
+    stroke: #673AB7;
+    stroke-width: 3px;
+    -webkit-transform-origin: 50%;
+            transform-origin: 50%;
+    -webkit-animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 1.6s linear infinite;
+            animation: line 1.6s cubic-bezier(0.4, 0, 0.2, 1) infinite, rotate 1.6s linear infinite; }
+
 /*
  *
  * btns.css
@@ -125,7 +169,7 @@ a:active  {
   border-width: 1px;
   color: #111;
   display: inline-block;
-  font-family: avenir, helvetica, roboto, arial, sans-serif;
+  /*font-family: avenir, helvetica, roboto, arial, sans-serif;*/
   letter-spacing: 0.15em;
   margin-bottom: 0.5em;
   padding: 1em 1.5em;
