--- a/static/templates/authentication/login.html
+++ b/static/templates/authentication/login.html
@@ -1,5 +1,5 @@
 <div>
-  <div>
+  <div class="form-page">
 
     <div class="well">
       <form class="form" role="form" ng-submit="vm.login()">
@@ -15,8 +15,8 @@
           <input class="form-input" type="password" class="form-control" id="login__password" ng-model="vm.password" placeholder="ex. thisisnotgoogleplus" />
         </div>
 
-        <div class="form-group button-group">
-          <button btn type="submit" class="btn btn-primary">Login</button>
+        <div class="form-group button-right">
+          <button btn type="submit" class="btn btn-primary pull-right">Login</button>
         </div>
       </form>
     </div>
