--- a/static/templates/authentication/register.html
+++ b/static/templates/authentication/register.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="form-page">
 
     <div class="well">
       <form class="form" role="form" ng-submit="vm.register()">
@@ -18,8 +18,8 @@
           <input class="form-input" type="password" class="form-control" id="register__password" ng-model="vm.password" placeholder="ex. thisisnotgoogleplus" />
         </div>
 
-        <div class="form-group button-group">
-          <button type="submit" class="btn btn-primary">Register</button>
+        <div class="form-group button-right">
+          <button type="submit" class="btn btn-primary pull-right">Register</button>
         </div>
       </form>
     </div>
