--- a/static/templates/profiles/profile.html
+++ b/static/templates/profiles/profile.html
@@ -1,5 +1,5 @@
 <div class="profile" ng-show="vm.profile">
-    <div class="jumbotron profile__header">
+    <div class="well profile__header">
         <h1 class="profile__username">+{{ vm.profile.username }}</h1>
         <p class="profile__tagline">{{ vm.profile.tagline }}</p>
     </div>
