--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html ng-app="foyer">
+
 <head>
-  <title>Foyer</title>
-
-  <base href="/" />
-
-  {% include 'stylesheets.html' %}
+    <title>Foyer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="/" /> {% include 'stylesheets.html' %}
 </head>
 
 <body>
-  {% include 'navbar.html' %}
+    {% include 'navbar.html' %}
 
-  <div>
     <div>
-      <div class="ng-view">
-      </div>
+        <div>
+            <div class="ng-view">
+            </div>
+        </div>
     </div>
-  </div>
 
-  {% include 'javascripts.html' %}
+    {% include 'javascripts.html' %}
 </body>
+
 </html>
