--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -3,38 +3,18 @@
 
 {% compress js %}
 
-<script type="text/javascript" src="{% static 'node_modules/jquery/dist/jquery.js' %}"></script>
-<script type="text/javascript" src="{% static 'node_modules/underscore/underscore.js' %}"></script>
-
 <script type="text/javascript" src="{% static 'node_modules/angular/angular.js' %}"></script>
-<script type="text/javascript" src="{% static 'node_modules/angular-route/angular-route.js' %}"></script>
+<script type="text/javascript" src="{% static 'node_modules/angular-ui-router/release/angular-ui-router.js' %}"></script>
 <script type="text/javascript" src="{% static 'node_modules/angular-cookies/angular-cookies.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/app.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'node_modules/ng-dialog/js/ngDialog.js' %}"></script>
-<script type="text/javascript" src="{% static 'lib/snackbarjs/snackbar.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/components/root/root.component.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/components/navbar/navbar.component.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/components/login/login.component.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/components/register/register.component.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/components/home/home.component.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'javascripts/foyer.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/foyer.config.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/foyer.routes.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/authentication.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/services/authentication.service.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/register.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/login.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/layout/layout.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/layout/controllers/navbar.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/posts/posts.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/posts/services/posts.service.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/utils/utils.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/utils/services/snackbar.service.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/layout/controllers/index.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/posts/directives/posts.directive.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/posts/controllers/posts.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/posts/directives/post.directive.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/posts/controllers/new-post.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/profiles/profiles.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/profiles/services/profile.service.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/profiles/controllers/profile.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/profiles/controllers/profile-settings.controller.js' %}"></script>
 
+<script type="text/javascript" src="{% static 'javascripts/services/authentication/authentication.service.js' %}"></script>
 {% endcompress %}
